[PD-11645] - SEO Landing Page: Fix for SEO Accessories in IE and cutoff images in IE8

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/seoParts/seoBrandList.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/seoParts/seoBrandList.less
@@ -75,6 +75,15 @@
           vertical-align: bottom;
           -webkit-backface-visibility: hidden;
           text-align: center;
+		  #svg-icon-hoover {
+			margin: 12px 0;
+		  }
+		  #svg-icon-black-decker {
+			margin: 8px 0;
+		  }
+		  #svg-icon-homelite {
+			height: 100px;
+		  }
         }
 
         i {
