--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/seoParts/seoBrandList.mobile.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/seoParts/seoBrandList.mobile.less
@@ -80,6 +80,10 @@
 						[class*="span"] {
 							width: 50%;
 							float: left;
+							#svg-icon-hoover,
+							#svg-icon-black-decker{
+								margin: 0;
+							}
 						}
 					}
 				}
